kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpeevo-backend
  labels:
    app: cpeevo-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cpeevo-backend
  template:
    metadata:
      labels:
        app: cpeevo-backend
    spec:
      containers:
      - name: cpeevo-backend
        image: encalls/cpeevo-backend:latest
        ports:
        - containerPort: 8080
