kubernetes/mongoService.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    app: mongodb
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
