kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpeevo-backend
spec:
  selector:
    app: cpeevo-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
