kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpeevo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - cpeevo-api.encall.live
    secretName: cpeevo-tls
  rules:
  - host: cpeevo-api.encall.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: letsencrypt-prod
            port:
              number: 80
